Bug 267338 - [WGSL] shader,execution,expression,call,builtin,length:* is failing
Summary: [WGSL] shader,execution,expression,call,builtin,length:* is failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-10 07:32 PST by Tadeu Zagallo
Modified: 2024-01-11 00:44 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-10 07:32:06 PST
...
Comment 1 Radar WebKit Bug Importer 2024-01-10 07:32:22 PST
<rdar://problem/120784047>
Comment 2 Tadeu Zagallo 2024-01-10 07:33:15 PST
Pull request: https://github.com/WebKit/WebKit/pull/22589
Comment 3 EWS 2024-01-11 00:44:18 PST
Committed 272900@main (3c7ac2a67deb): <https://commits.webkit.org/272900@main>

Reviewed commits have been landed. Closing PR #22589 and removing active labels.