[WGSL] shader,execution,expression,call,builtin,length:* is failing https://bugs.webkit.org/show_bug.cgi?id=267338 rdar://120784047

Reviewed by Mike Wyrzykowski.

We were missing a call to sqrt on the result of the constant function.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):

Canonical link: https://commits.webkit.org/272900@main